tests/baselines/reference/scannertest1.errors.txt
==== tests/cases/conformance/scanner/ecmascript5/scannertest1.ts (16 errors) ====
    ///<reference path='References.ts' />
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS6053: File 'References.ts' not found.
    
    class CharacterInfo {
        public static isDecimalDigit(c: number): boolean {
            return c >= CharacterCodes._0 && c <= CharacterCodes._9;
                        ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    
        public static isHexDigit(c: number): boolean {
            return isDecimalDigit(c) ||
                   ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'isDecimalDigit'.
                   (c >= CharacterCodes.A && c <= CharacterCodes.F) ||
                         ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                   (c >= CharacterCodes.a && c <= CharacterCodes.f);
                         ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                  ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    
        public static hexValue(c: number): number {
            Debug.assert(isHexDigit(c));
            ~~~~~
!!! error TS2304: Cannot find name 'Debug'.
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'isHexDigit'.
            return isDecimalDigit(c)
                   ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'isDecimalDigit'.
                ? (c - CharacterCodes._0)
                       ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                : (c >= CharacterCodes.A && c <= CharacterCodes.F)
                        ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                                                 ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                    ? c - CharacterCodes.A + 10
                          ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
                    : c - CharacterCodes.a + 10;
                          ~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'CharacterCodes'.
        }
    }
    
    